--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="sticky top-0 z-50">
   <nav class="bg-white border-dark-700 px-4 lg:px-6 py-2.5 dark:bg-dark">
       <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
           <a href="/" class="flex items-center">
@@ -25,7 +25,7 @@
                       <a href="/features" id="features-link" class="block py-2 pr-4 pl-3 lg:p-0">Features</a>
                   </li>
                   <li>
-                      <a href="/api" id="api-link" class="block py-2 pr-4 pl-3 lg:p-0">Open API</a>
+                      <a href="/api-docs" id="api-link" class="block py-2 pr-4 pl-3 lg:p-0">Open API</a>
                   </li>
                   <li>
                       <a href="/team" id="team-link" class="block py-2 pr-4 pl-3 lg:p-0">Team</a>
@@ -57,7 +57,7 @@
       "/": document.getElementById("home-link"),
       "/about": document.getElementById("about-link"),
       "/features": document.getElementById("features-link"),
-      "/api": document.getElementById("api-link"),
+      "/api-docs": document.getElementById("api-link"),
       "/team": document.getElementById("team-link"),
       "/contact": document.getElementById("contact-link"),
     };
