--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -12,8 +12,8 @@
             <h1 class="text-3xl font-bold text-center text-text-light mb-6">Create an Account</h1>
             <form class="space-y-6">
                 <div class="relative z-0 w-full mb-5 group">
-                    <input type="email" name="floating_email" id="floating_email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
-                    <label for="floating_email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
+                    <input type="email" name="email" id="email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
+                    <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
                 </div>
                 <button class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
                     Submit
