--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -16,7 +16,7 @@
                     <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
                 </div>
                 <button class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
-                    Submit
+                    Sign up
                 </button>
             </form>
             <p class="mt-8 text-sm text-center text-text-light">Already have an account? 
