--- a/src/views/pages/auth/register.ejs
+++ b/src/views/pages/auth/register.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('../../components/head.ejs') %>
+    <script src="/js/auth.js"></script>
     <title>MPC Lab | Register</title>
 </head>
 
@@ -10,12 +11,12 @@
     <main class="flex items-center justify-center h-full px-4">
         <div class="w-full max-w-md bg-dark-400 rounded-lg p-8 shadow-lg">
             <h1 class="text-3xl font-bold text-center text-text-light mb-6">Create an Account</h1>
-            <form class="space-y-6">
+            <form id="auth-form" class="space-y-6">
                 <div class="relative z-0 w-full mb-5 group">
                     <input type="email" name="email" id="email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
                     <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
                 </div>
-                <button class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
+                <button id="register" class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
                     Sign up
                 </button>
             </form>
@@ -24,6 +25,35 @@
             </p>
         </div>
     </main>
-</body>  
+    <script>
+        const auth = new Auth(app);
+        const registerButton = document.getElementById('register');
+        registerButton.addEventListener('click', async (event) => {
+            registerButton.disabled = true;
+            event.preventDefault();
+            const email = document.getElementById('email').value;
+            const response = await auth.register(email);
+            if (response.status === "success") {
+                document.getElementById('auth-form').innerHTML = "";
+                app.ui.notification(
+                    "alert",
+                    response.message,
+                    "success",
+                    document.getElementById("auth-form"),
+                    "register"
+                );
+            } else {
+                registerButton.disabled = false;
+                app.ui.notification(
+                    "alert",
+                    response.message,
+                    "error",
+                    document.getElementById("auth-form"),
+                    "register"
+                );
+            }
+        });
+    </script>
+</body>
 
 </html>
