--- a/src/views/pages/auth/complete-registration.ejs
+++ b/src/views/pages/auth/complete-registration.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('../../components/head.ejs') %>
+    <script src="/js/auth.js"></script>
     <title>MPC Lab | Complete Registration</title>
 </head>
 
@@ -10,7 +11,7 @@
     <main class="flex items-center justify-center h-full px-4">
         <div class="w-full max-w-md bg-dark-400 rounded-lg p-8 shadow-lg">
             <h1 class="text-3xl font-bold text-center text-text-light mb-6">Complete Registration</h1>
-            <form class="space-y-6">
+            <form id="auth-form" class="space-y-6">
                 <div class="relative z-0 w-full mb-5 group">
                     <input type="username" name="username" id="username" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
                     <label for="username" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Username</label>
@@ -19,12 +20,75 @@
                     <input type="password" name="password" id="password" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
                     <label for="password" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Password</label>
                 </div>
-                <button class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
+                <button id="complete-registration" class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
                     Finish
                 </button>
             </form>
         </div>
     </main>
-</body>  
+    <script>
+        const auth = new Auth(app);
+        const completeRegistrationButton = document.getElementById('complete-registration');
+        completeRegistrationButton.addEventListener('click', async (event) => {
+            completeRegistrationButton.disabled = true;
+            event.preventDefault();
+            const token = "<%= token %>";
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            const response = await auth.completeRegistration(token, username, password);
+            if (response.status === "success") {
+                document.getElementById('auth-form').innerHTML = "";
+                app.ui.notification(
+                    "alert",
+                    response.message,
+                    "success",
+                    document.getElementById("auth-form"),
+                    "register"
+                );
+
+                setTimeout(() => {
+                    window.location.href = "/login";
+                }, 2000);
+            } else {
+                completeRegistrationButton.disabled = false;
+                if (response.error.code === "INVALID_USERNAME") {
+                    app.ui.notification(
+                        "list",
+                        [
+                            "Username must be at least 3 characters long",
+                            "Username can only contain letters, numbers, and underscores",
+                        ],
+                        "error",
+                        document.getElementById("auth-form"),
+                        "register"
+                    );
+                    return;
+                } else if (response.error.code === "INVALID_PASSWORD") {
+                    app.ui.notification(
+                        "list",
+                        [
+                            "Password must be at least 8 characters long",
+                            "Password must contain at least one uppercase letter",
+                            "Password must contain at least one lowercase letter",
+                            "Password must contain at least one number",
+                            "Password must contain at least one special character",
+                        ],
+                        "error",
+                        document.getElementById("auth-form"),
+                        "register"
+                    );
+                    return;
+                }
+                app.ui.notification(
+                    "alert",
+                    response.message,
+                    "error",
+                    document.getElementById("auth-form"),
+                    "register"
+                );
+            }
+        });
+    </script>
+</body>
 
 </html>
