--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('../../components/head.ejs') %>
+    <script src="/js/auth.js"></script>
     <title>MPC Lab | Login</title>
 </head>
 
@@ -10,16 +11,16 @@
     <main class="flex items-center justify-center h-full px-4">
         <div class="w-full max-w-md bg-dark-400 rounded-lg p-8 shadow-lg">
             <h1 class="text-3xl font-bold text-center text-text-light mb-6">Log in</h1>
-            <form class="space-y-6">
+            <form id="auth-form" class="space-y-6">
                 <div class="relative z-0 w-full mb-5 group">
-                    <input type="email" name="email" id="email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
-                    <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
+                    <input type="text" name="identifier" id="identifier" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
+                    <label for="identifier" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Username or Email</label>
                 </div>
                 <div class="relative z-0 w-full mb-5 group">
                     <input type="password" name="password" id="password" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
                     <label for="password" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Password</label>
                 </div>
-                <button class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
+                <button id="login" class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
                     Sign in
                 </button>
             </form>
@@ -29,6 +30,30 @@
             </p>
         </div>
     </main>
-</body>  
+    <script>
+        const auth = new Auth(app);
+        const loginButton = document.getElementById('login');
+        loginButton.addEventListener('click', async (event) => {
+            loginButton.disabled = true;
+            event.preventDefault();
+            const identifier = document.getElementById('identifier').value;
+            const password = document.getElementById('password').value;
+            const response = await auth.login(identifier, password);
+            if (response.status === "success") {
+                app.setTokens(response.data.accessToken, response.data.refreshToken);
+                window.location.href = "/dashboard";
+            } else {
+                loginButton.disabled = false;
+                app.ui.notification(
+                    "alert",
+                    response.message,
+                    "error",
+                    document.getElementById("auth-form"),
+                    "login"
+                );
+            }
+        });
+    </script>
+</body>
 
 </html>
