refactor(app): Restructure App class and introduce Proxy for automatic data updates
- Refactored `App` class to improve initialization and modularization of core components (`Data`, `Auth`, `Location`, `UI`).
- Introduced Proxy in the `Data` class to automatically handle updates to local storage, eliminating the need for manual data saving.
- Updated the page logic to leverage the new class structure, improving separation of concerns and code clarity.

--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <%- include('../components/head.ejs') %>
-    <title>MPC Lab | Home</title>
+  <%- include("../components/head.ejs") %>
+  <title>MPC Lab | Home</title>
 </head>
 
 <body>
-    <%- include('../components/header.ejs') %>
+  <%- include("../components/header.ejs") %>
 </body>
 
 </html>
