--- a/src/views/pages/auth/password-reset.ejs
+++ b/src/views/pages/auth/password-reset.ejs
@@ -2,59 +2,59 @@
 <html lang="en">
 
 <head>
-    <%- include('../../components/head.ejs') %>
-    <script src="/js/auth.js"></script>
-    <title>MPC Lab | Reset Password</title>
+  <%- include("../../components/head.ejs") %>
+  <script src="/js/auth.js"></script>
+  <title>MPC Lab | Reset Password</title>
 </head>
 
 <body class="bg-dark-500 h-screen">
-    <main class="flex items-center justify-center h-full px-4">
-        <div class="w-full max-w-md bg-dark-400 rounded-lg p-8 shadow-lg">
-            <h1 class="text-3xl font-bold text-center text-text-light mb-6">Reset Password</h1>
-            <form id="auth-form" class="space-y-6">
-                <div class="relative z-0 w-full mb-5 group">
-                    <input type="email" name="email" id="email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
-                    <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
-                </div>
-                <button id="reset" class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
-                    Reset Password
-                </button>
-            </form>
-            <a href="/login" class="block mt-4 text-sm text-center text-accent font-medium hover:underline">Back to login</a>
-            <p class="mt-8 text-sm text-center text-text-light">Don't have an account?
-                <a href="/register" class="text-accent font-medium hover:underline">Register</a>
-            </p>
+  <main class="flex items-center justify-center h-full px-4">
+    <div class="w-full max-w-md bg-dark-400 rounded-lg p-8 shadow-lg">
+      <h1 class="text-3xl font-bold text-center text-text-light mb-6">Reset Password</h1>
+      <form id="auth-form" class="space-y-6">
+        <div class="relative z-0 w-full mb-5 group">
+          <input type="email" name="email" id="email" class="block py-2.5 px-0 w-full text-sm text-text-light bg-transparent border-0 border-b-2 border-accent appearance-none focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
+          <label for="email" class="peer-focus:font-medium absolute text-sm text-text-light duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email address</label>
         </div>
-    </main>
-    <script>
-        const auth = new Auth(app);
-        const resetButton = document.getElementById('reset');
-        resetButton.addEventListener('click', async (event) => {
-            resetButton.disabled = true;
-            event.preventDefault();
-            const email = document.getElementById('email').value;
-            const response = await auth.resetPassword(email);
-            if (response.status === "success") {
-                document.getElementById('auth-form').innerHTML = "";
-                app.ui.notification(
-                    "alert",
-                    response.message,
-                    "success",
-                    document.getElementById("auth-form"),
-                    "reset"
-                );
-            } else {
-                resetButton.disabled = false;
-                app.ui.notification(
-                    "alert",
-                    response.message,
-                    "error",
-                    document.getElementById("auth-form"),
-                    "reset"
-                );
-            }
-        });
-    </script>
+        <button id="reset" class="w-full py-3 bg-primary text-text-light rounded-lg font-medium text-sm hover:bg-accent focus:ring-4 focus:outline-none focus:ring-accent transition-shadow shadow-md">
+          Reset Password
+        </button>
+      </form>
+      <a href="/login" class="block mt-4 text-sm text-center text-accent font-medium hover:underline">Back to login</a>
+      <p class="mt-8 text-sm text-center text-text-light">Don't have an account?
+        <a href="/register" class="text-accent font-medium hover:underline">Register</a>
+      </p>
+    </div>
+  </main>
+  <script>
+    const auth = new Authentication(app);
+    const resetButton = document.getElementById("reset");
+    resetButton.addEventListener("click", async (event) => {
+      resetButton.disabled = true;
+      event.preventDefault();
+      const email = document.getElementById("email").value;
+      const response = await auth.resetPassword(email);
+      if (response.status === "success") {
+        document.getElementById("auth-form").innerHTML = "";
+        app.ui.notification(
+          "alert",
+          response.message,
+          "success",
+          document.getElementById("auth-form"),
+          "reset"
+        );
+      } else {
+        resetButton.disabled = false;
+        app.ui.notification(
+          "alert",
+          response.message,
+          "error",
+          document.getElementById("auth-form"),
+          "reset"
+        );
+      }
+    });
+  </script>
 </body>
 
 </html>
