--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -1,13 +1,13 @@
 <header class="sticky top-0 z-50">
-  <nav class="bg-white border-dark-700 px-4 lg:px-6 py-2.5 dark:bg-dark">
+  <nav class="bg-dark border-dark-700 px-4 lg:px-6 py-2.5">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
       <a href="/" class="flex items-center">
         <img src="/img/logo.svg" class="mr-3 h-6 sm:h-9" alt="MPC Lab Logo" />
       </a>
       <div class="flex items-center lg:order-2">
-        <a href="/login" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a>
-        <a href="/register" class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-500 dark:hover:bg-primary-600 focus:outline-none dark:focus:ring-primary-700">Get started</a>
-        <button data-collapse-toggle="mobile-menu" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu" aria-expanded="false">
+        <a href="/login" class="text-white hover:bg-gray-700 focus:ring-4 focus:ring-gray-800 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Log in</a>
+        <a href="/register" class="text-white bg-primary-500 hover:bg-primary-600 focus:ring-4 focus:ring-primary-700 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 focus:outline-none">Get started</a>
+        <button data-collapse-toggle="mobile-menu" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-background-400 rounded-lg lg:hidden hover:bg-gray-700 focus:outline-none focus:ring-gray-600 focus:ring-gray-200" aria-controls="mobile-menu" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
@@ -66,8 +66,8 @@
       "/contact": document.getElementById("contact-link"),
     };
 
-    const activeClass = "text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 dark:text-white";
-    const inactiveClass = "text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700";
+    const activeClass = "text-white rounded bg-primary-700 lg:bg-transparent";
+    const inactiveClass = "text-gray-400 border-b border-gray-700 hover:bg-gray-700 lg:hover:bg-transparent lg:border-0 lg:hover:hover:text-white";
 
     Object.keys(links).forEach((path) => {
       links[path].className =
