--- a/src/views/pages/user/profile.ejs
+++ b/src/views/pages/user/profile.ejs
@@ -11,7 +11,7 @@
   <main class="sm:ml-64 p-6">
     <h1 class="text-2xl font-semibold mb-6">Profile</h1>
 
-    <div class="bg-white shadow-md rounded-lg p-6">
+    <div class="bg-background-50 shadow-md rounded-lg p-6">
       <h2 class="text-xl font-bold mb-4">User Information</h2>
 
       <div class="mb-4">
