--- a/src/views/pages/user/security.ejs
+++ b/src/views/pages/user/security.ejs
@@ -11,7 +11,7 @@
   <main class="sm:ml-64 p-6">
     <h1 class="text-2xl font-semibold mb-6">Security Records</h1>
 
-    <div class="bg-white shadow-md rounded-lg p-6 overflow-x-auto">
+    <div class="bg-background-50 shadow-md rounded-lg p-6 overflow-x-auto">
       <table class="min-w-full">
         <thead>
           <tr class="bg-gray-100 border-b">
