--- a/src/views/pages/user/settings.ejs
+++ b/src/views/pages/user/settings.ejs
@@ -11,7 +11,7 @@
   <main class="sm:ml-64 p-6">
     <h1 class="text-2xl font-semibold mb-6">Settings</h1>
 
-    <div class="bg-white shadow-md rounded-lg p-6">
+    <div class="bg-background-50 shadow-md rounded-lg p-6">
 
       <div class="mb-6">
         <label for="username" class="block text-sm font-medium text-text">Username</label>
