--- a/src/views/pages/auth/complete-password-reset.ejs
+++ b/src/views/pages/auth/complete-password-reset.ejs
@@ -57,7 +57,7 @@
           "reset"
         );
         setTimeout(() => {
-          window.location.href = "/login";
+          app.location.redirect("/login");
         }, 2000);
       } else {
         completePasswordResetButton.disabled = false;
