--- a/src/views/pages/user/settings.ejs
+++ b/src/views/pages/user/settings.ejs
@@ -34,6 +34,7 @@
           <input type="password" id="confirm-password" placeholder="Confirm New Password" class="p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-primary-500" />
         </div>
         <button id="update-password" class="mt-4 bg-primary-500 text-white px-4 py-2 rounded hover:bg-primary-400 transition-colors duration-200">Update Password</button>
+        <p class="mt-2 text-sm text-gray-500">It may take up to 15 minutes to log out all devices.</p>
       </div>
 
     </div>
